# AdventOfCode2023

./: Cargo.toml  README.md  assignment_ecg_classification.ipynb
.github/workflows/: clear-files.yml  rust.yml
day01/src/: main.rs  part1.rs  part2.rs
day02/src/: main.rs  parser.rs  part1.rs  part2.rs
day03/src/: main.rs  part1.rs  part2.rs
day04/: Cargo.toml
day04/src/: main.rs  parser.rs  part1.rs  part2.rs
day05/: Cargo.toml
day05/src/: main.rs  parser.rs  part1.rs  part2.rs
day06/: Cargo.toml
day06/src/: main.rs  parser.rs  part1.rs  part2.rs
day07/src/: main.rs  part1.rs  part2.rs
day08/: Cargo.toml
day08/src/: main.rs  parser.rs  part1.rs  part2.rs
day09/src/: main.rs  part1.rs  part2.rs
day10/src/: main.rs  part1.rs
day11/: Cargo.toml
day11/src/: main.rs  part1.rs  part2.rs
day12/: Cargo.toml
day12/src/: main.rs  part1.rs  part2.rs
day13/: Cargo.toml
day13/src/: main.rs  parser.rs  part1.rs  part2.rs
day14/: Cargo.toml
day14/src/: main.rs  parser.rs  part1.rs  part2.rs
day15/: Cargo.toml
day15/src/: main.rs  part1.rs  part2.rs
day16/src/: main.rs  part1.rs  part2.rs
day17/: Cargo.toml
day17/src/: main.rs  part1.rs  part2.rs
day18/: Cargo.toml
day18/src/: main.rs  parser.rs  part1.rs  part2.rs
day19/: Cargo.toml
day19/src/: main.rs  parser.rs  part1.rs  part2.rs
day20/: Cargo.toml
day20/src/: lib.rs  main.rs  parser.rs  part1.rs  part2.rs
day_template/: README.md  input.txt
day_template/src/: main.rs  part2.rs
template_src/: part1.rs  part2.rs
